-
Bug
-
Resolution: Done
-
P4: Low
-
5.6.0
-
None
-
65cdffeaeadfc52fe0d1f2a73f82b698327a3b27 (qtbase.5.6, 26.7.2016, 5.6.2)
On Windows 8.1 or 10, in a certain situation, a QAxWidget is not drawn at the correct coordinate in a multi-monitor, multi-dpi setup. This bug is dependent on many conditions (see below).
All these conditions must exist for the bug to appear:
- The primary monitor is set at a DPI of 150% or more
- The secondary monitor is set at 100%
- The mouse pointer is on the secondary monitor when QAxWidget is first shown
- The application manifest specify </dpiAware>true</dpiAware>
this mean "High DPI Aware" (== System Aware) but not "Per Monitor High DPI Aware" - The "QT_AUTO_SCREEN_SCALE_FACTOR" environment variable is set to "1"
We attached a simple project to reproduce the bug and a screenshot of the result.
For Gerrit Dashboard: QTBUG-54420 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163776,3 | QPlatformWindow::initialGeometry(): Do not touch child window positions | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |